--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic|Source+Code+Pro);
+
 body {
   color: #000;
   background: #FFF;
@@ -5,7 +7,7 @@ body {
   width: 33em;
   margin: 6em auto;
 
-  font-family: sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 14pt;
   line-height: 1.5;
 }
@@ -51,6 +53,8 @@ pre {
   background: #EEE;
   padding: .5em;
   margin: 1em 2em;
+
+  font-family: 'Source Code Pro', monospace;
 }
 
 code {
