--- a/res/layout/activity_orientation_tracker.xml
+++ b/res/layout/activity_orientation_tracker.xml
@@ -1,18 +1,29 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:background="#FF000000"
-    android:orientation="vertical" >
-    
-    <org.haldean.gesturecontrol.ColorView
-        android:id="@+id/color"
+    android:background="#FF000000" >
+
+    <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp"
-        >  
-    </org.haldean.gesturecontrol.ColorView>
+        android:gravity="center"
+        android:orientation="vertical" >
 
-</LinearLayout>
+        <org.haldean.gesturecontrol.ColorView
+            android:id="@+id/color"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp" >
+        </org.haldean.gesturecontrol.ColorView>
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/imageButton1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="Settings"
+        android:src="@android:drawable/ic_menu_manage" />
+
+</RelativeLayout>
